# Cinefilm

./: .dockerignore  .firebaserc  .gitignore  APP_STATUS.md  CLI_ACTIONABLE_BLOCKAGES.md  CLI_PROGRESS_SUMMARY.md  CLI_VS_WEB_SETUP.md  CONFIGURATION_STATUS.md  CONNECTION_SUMMARY.md  CONSOLE_SETUP_CHECKLIST.md  CURRENT_BLOCKAGES.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DESIGN_LANDING_STUDIO.md  DOCKER_DEPLOYMENT_AUDIT.md  DOCKER_DEPLOYMENT_COMPLETE.md  DOMAIN_MIGRATION_STEPS.md  EMULATOR_SETUP_SUMMARY.md  FINAL_SETUP_STATUS.md  FINAL_STATUS.md  FIREBASE_EMULATORS_DISABLED.md  FIREBASE_EMULATORS_SETUP.md  FIREBASE_EMULATOR_FIX.md  FIREBASE_EMULATOR_SETUP.md  FIREBASE_EMULATOR_WORKAROUNDS.md  FIREBASE_VS_CLOUD_RUN_DOMAINS.md  GO_LIVE_EXECUTIVE_SUMMARY.md  IMMEDIATE_ACTIONS.md  LOCALHOST_URLS.md  LOCAL_DEV_CONFIGURATION_REPORT.md  LOCAL_TESTING_GUIDE.md  PHASE_10_COMPLETE.md  PRODUCTION_SERVICES_RECOMMENDATIONS.md  PROJECT_INSPECTION_REPORT.md  QUICK_START.md  README.md  README_DOCKER.md  README_EMULATOR_SETUP.md  SERVICES_STATUS.md  SERVICES_UTILIZATION_ANALYSIS.md  (+12 more)
backend/: .dockerignore  Dockerfile  cloudbuild.yaml  env.example  pyproject.toml
backend/api/: __init__.py  config.py  main.py
backend/api/agents/: __init__.py  base_agent.py  concept_agent.py  preproduction_agent.py  script_agent.py
backend/api/lib/: __init__.py  n8n.py  redis.py
backend/api/middleware/: admin.py  auth.py  cache.py  rate_limit.py  usage_tracking.py
backend/api/models/: project.py  workflow.py
backend/api/routers/: admin.py  agents.py  health.py  projects.py  webhooks.py
(+30 files in other folders)
